--- a/css/style.css
+++ b/css/style.css
@@ -732,6 +732,7 @@ body {
   overflow-x: hidden;
   background-color: #F4F4F4;
   position: relative;
+  font-family: 'Microsoft JhengHei', Arial, Helvetica, sans-serif;
 }
 
 body::before {
@@ -781,8 +782,18 @@ header.page-head {
 }
 
 header.dark-mod {
-  background-color: #393939;
   color: #ffffff;
+  height: 58px;
+  position: relative;
+}
+
+header.dark-mod .container-full {
+  background-color: #393939;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 main.business {
@@ -794,6 +805,7 @@ main.inspect-mod {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
 }
 
 footer {
@@ -807,6 +819,11 @@ footer {
 footer.gray {
   background-color: #4B4B4B;
   color: #ffffff;
+}
+
+footer.light-gray {
+  background-color: #e0e0e0;
+  color: #000000;
 }
 
 .m-auto {
@@ -836,9 +853,27 @@ footer.gray {
   background-color: #FF5E15;
 }
 
+.btns.btn-black-blue {
+  background-color: #393939;
+  color: #ffffff;
+}
+
+.btns.btn-black-blue:hover {
+  background-color: #0072EC;
+}
+
 .btns.btn-orange {
   background-color: #FF5E15;
   color: #ffffff;
+}
+
+.btns.btn-blue {
+  background-color: #0072EC;
+  color: #ffffff;
+}
+
+.btns.btn-blue:hover {
+  background-color: #0a3a92;
 }
 
 .btns.btn-outline-orange {
@@ -1020,6 +1055,12 @@ footer.gray {
           flex: auto;
 }
 
+.page-title .page-title-img {
+  width: 32px;
+  margin: auto;
+  margin-right: 8px;
+}
+
 .page-title-btns {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1050,6 +1091,11 @@ footer.gray {
   display: -ms-flexbox;
   display: flex;
   padding: 16px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.notify-content .notify-block:last-child {
+  border-bottom: 0;
 }
 
 .notify-content .notify-block.head {
@@ -1119,6 +1165,12 @@ footer.gray {
   background-color: #757575;
 }
 
+.notify-content .notify-page ul li {
+  display: inline-block;
+  padding: 8px;
+  color: #757575;
+}
+
 input {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1172,10 +1224,7 @@ input[type="checkbox"] {
   border-radius: 4px;
 }
 
-.select {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+select {
   outline: none;
   width: 100%;
 }
@@ -1212,10 +1261,44 @@ select:focus {
 .form-title {
   padding: 16px;
   background-color: #e0e0e0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.form-title span {
+.form-title .text {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+.form-title .text span {
   color: #DA1E28;
+}
+
+.form-title .form-title-btn {
+  background-color: #393939;
+  color: #ffffff;
+  margin: -16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+.form-title .form-title-btn:hover {
+  background-color: #0072EC;
+}
+
+.form-title .form-title-btn .text {
+  margin: auto 0;
+}
+
+.form-title .form-title-btn .icon {
+  width: 20px;
+  margin: auto 0px;
+  margin-left: 8px;
 }
 
 .form-body {
@@ -1268,6 +1351,7 @@ select:focus {
 .form-col .form-group p {
   margin: auto 0;
   padding: 0 8px;
+  white-space: nowrap;
 }
 
 .form-col .form-group .w-50 {
@@ -1353,6 +1437,7 @@ select:focus {
   display: inline-flex;
   min-width: 176px;
   cursor: pointer;
+  margin-top: 20px;
 }
 
 .action-block:hover {
@@ -1414,7 +1499,7 @@ select:focus {
 }
 
 .check-apply .td-checkbox {
-  max-width: 50px;
+  width: 1%;
   vertical-align: middle;
   text-align: center;
 }
@@ -1507,7 +1592,6 @@ select:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 20px;
 }
 
 .warning-message .message-img {
@@ -1725,30 +1809,124 @@ select:focus {
   position: relative;
 }
 
-.side-nav {
-  background-color: #ffffff;
+.side-nav-wrap {
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 18%;
-          flex: 1 0 18%;
+      -ms-flex: 1 0 15%;
+          flex: 1 0 15%;
+}
+
+.side-nav {
+  max-width: 15%;
+  background-color: #ffffff;
+  position: fixed;
+  top: 58px;
+  bottom: 0;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .side-nav .side-each {
-  padding: 8px 16px;
   font-size: 14px;
   cursor: pointer;
 }
 
+.side-list .side-list-title {
+  padding: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: .3s ease-out;
+  transition: .3s ease-out;
+}
+
+.side-list .side-list-title .icon {
+  width: 12px;
+  margin: auto 8px;
+}
+
+.side-list .side-list-title .text {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+}
+
+.side-list .side-list-title .title-icon {
+  width: 20px;
+  margin: auto 8px;
+}
+
+.side-main {
+  padding: 8px 16px;
+}
+
+.side-main:hover {
+  background-color: rgba(218, 30, 40, 0.1);
+  color: #DA1E28;
+}
+
+.side-subs {
+  padding: 8px 16px;
+  padding-left: 32px;
+}
+
+.side-subs:hover {
+  background-color: #e0e0e0;
+  position: relative;
+}
+
+.side-subs:hover::after {
+  content: "";
+  width: 3px;
+  height: 100%;
+  background-color: #0072EC;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.slide-down-inner {
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: .3s ease-out;
+  transition: .3s ease-out;
+}
+
+.nav-toggle.is-open .side-list-title .icon {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.nav-toggle.is-open .slide-down-inner {
+  height: auto;
+}
+
 .inspect-content {
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 82%;
-          flex: 1 0 82%;
+      -ms-flex: 1 0 85%;
+          flex: 1 0 85%;
 }
 
 .inspect-content .inspect-container {
   width: 95%;
   margin: 0 auto;
+  padding: 20px 0 50px;
 }
 
 .inspect-content .inspect-btn {
   margin: 16px 0;
+}
+
+.form-end-btns {
+  margin-top: 30px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form-end-btns .btns {
+  margin-left: 20px;
 }
