--- a/bro/css/style.css
+++ b/bro/css/style.css
@@ -1,131 +1,1 @@
-body{
-    background-color: transparent;
-    font-family: 'Segoe UI';
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    border: 0;
-}
-
-.titlecube{
-    margin-top: 0rem;
-}
-
-.texttitle1{
-    margin-left: 20rem;
-    font-size: 16px;
-}
-
-.texttitle2{
-    margin-left: 20rem;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.topcube{
-    margin-left: 20rem;
-    width: 800px;
-    height: 500px;
-    position: relative;
-    top: 15px;
-}
-
-.texttop{
-    font-size: 40px;
-    font-weight: bold;
-    color: #FFFFFF;
-    position: absolute;
-    top: 200px;
-    left: 60px;
-}
-
-.msgcube{
-    margin-top: -29.75rem;
-    margin-bottom: 5rem;
-    margin-left: 20rem;
-    width: 600px;
-    height: 400px;
-    position: relative;
-    background-color: #FFFFFF;    
-}
-
-.textmsg{
-    font-size: 20px;
-    font-weight: bold;
-    position: absolute;
-    padding-left: 1rem;
-    top: 30px;
-}
-
-.mbtn-group {
-    position: relative;
-    display: inline-flex;
-    margin-top: 5rem;
-    padding-left: 1rem;
-}
-
-.checkout-mbtn .mbtn {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #E8EAEB;
-    color: #000000;
-    font-size: 16px;
-    font-weight: bold;
-    border-radius: 0rem;
-    width: 170px;
-    height: 40px;
-    margin-right: 1rem;
-}
-
-.checkout-mbtn .mbtn.active {
-    background-color: #FF5E15;
-    color: #FFFFFF;
-}
-
-.textannc1{
-    font-size: 10px;
-    font-weight: bold;
-    color: #9FA4A8;
-    position: absolute;
-    top: 200px;
-    padding-left: 1rem;
-    width: 90%;
-}
-
-.texthelp{
-    font-size: 12px;
-    font-weight: bold;
-    color: #AAA;
-    position: absolute;
-    top: 360px;
-    left: 25px;
-}
-
-.logincube{
-    display: flex;
-    flex-direction: column;
-    margin-top: -7rem;
-    margin-bottom: 4.75rem;
-    margin-left: 58.75rem;
-    width: 280px;
-    height: 400px;
-    background-color: #FFF;
-    position: relative;
-}
-
-.lbtn-QR{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FF8800;
-    color: #FFFFFF;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 38px;
-    width: 80%;
-}
-
-.btmcube{
-    text-align: center;
-}
+/* No CSS *//*# sourceMappingURL=style.css.map */
