--- a/css/style.css
+++ b/css/style.css
@@ -726,7 +726,7 @@ table {
 }
 
 body {
-  font-size: 16px;
+  font-size: 14px;
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -735,7 +735,7 @@ body {
   font-family: 'Microsoft JhengHei', Arial, Helvetica, sans-serif;
 }
 
-body::before {
+body.basic::before {
   content: "";
   background: url(../img/online/loginbg-left.png) left bottom no-repeat;
   background-size: 25%;
@@ -747,7 +747,7 @@ body::before {
   z-index: -1;
 }
 
-body::after {
+body.basic::after {
   content: "";
   background: url(../img/online/loginbg-right.png) right bottom no-repeat;
   background-size: 25%;
@@ -757,6 +757,12 @@ body::after {
   bottom: 0;
   right: 0;
   z-index: -1;
+}
+
+body.inspect-body {
+  background: url(../img/referring/inspect-bg.png) #F4F4F4 right bottom no-repeat;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
@@ -781,6 +787,7 @@ header.page-head {
 }
 
 header.dark-mod {
+  background-color: #393939;
   color: #ffffff;
   height: 58px;
   position: relative;
@@ -788,6 +795,7 @@ header.dark-mod {
 
 header.dark-mod .container-full {
   background-color: #393939;
+  height: 58px;
   position: fixed;
   top: 0;
   left: 0;
@@ -831,6 +839,12 @@ footer.light-gray {
 
 .d-block {
   display: block;
+}
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .btns {
@@ -1217,10 +1231,18 @@ input[type="radio"]:checked::after {
 }
 
 input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   border: 1px solid #393939;
   border-radius: 4px;
+}
+
+input[type="checkbox"]:checked {
+  border: 1px solid #FF5E15;
+  background-color: #FF5E15;
+  background-image: url(../img/check-solid.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 select {
@@ -1260,19 +1282,30 @@ select:focus {
 .form-title {
   padding: 16px;
   background-color: #e0e0e0;
+}
+
+.form-title .flex-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.form-title .text {
+.form-title .flex-block .text {
   -webkit-box-flex: 1;
       -ms-flex: auto;
           flex: auto;
 }
 
+.form-title .text {
+  font-size: 14px;
+}
+
 .form-title .text span {
   color: #DA1E28;
+}
+
+.form-title .text-block {
+  margin-bottom: 16px;
 }
 
 .form-title .form-title-btn {
@@ -1317,7 +1350,7 @@ select:focus {
 
 .form-col .form-name {
   background-color: #E8F0FE;
-  padding: 20px 12px;
+  padding: 16px 12px;
   margin-left: -1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1355,7 +1388,9 @@ select:focus {
 
 .form-col .form-group .w-50 {
   width: 60%;
-  max-width: 60%;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 
 .form-col .form-group .input-hint {
@@ -1423,8 +1458,27 @@ select:focus {
 }
 
 .table-wrap {
-  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  overflow: auto;
+}
+
+.block-title {
+  margin-top: 20px;
+}
+
+.block-title h4 {
+  margin-bottom: 20px;
+}
+
+.action-block-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.action-block-wrap .warning-message {
+  margin-left: 16px;
 }
 
 .action-block {
@@ -1436,7 +1490,6 @@ select:focus {
   display: inline-flex;
   min-width: 176px;
   cursor: pointer;
-  margin-top: 20px;
 }
 
 .action-block:hover {
@@ -1508,6 +1561,8 @@ select:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
 .count {
@@ -1597,6 +1652,10 @@ select:focus {
   width: 20px;
   margin: auto 0;
   margin-right: 8px;
+}
+
+.warning-message h4 {
+  margin: auto 0;
 }
 
 .operate-part {
@@ -1929,3 +1988,4 @@ select:focus {
 .form-end-btns .btns {
   margin-left: 20px;
 }
+/*# sourceMappingURL=style.css.map */
