--- a/css/style.css
+++ b/css/style.css
@@ -765,6 +765,12 @@ body.inspect-body {
   height: 100%;
 }
 
+body.inspect-login {
+  background: url(../img/referring/loginbg.jpg) #ffffff right bottom no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .container {
   max-width: 1280px;
   margin: 0 auto;
@@ -880,6 +886,17 @@ footer.light-gray {
   color: #ffffff;
 }
 
+.btns.btn-outline-orange {
+  background-color: #ffffff;
+  color: #FF5E15;
+  border: 1px solid #FF5E15;
+}
+
+.btns.btn-outline-orange:hover {
+  background-color: #FF5E15;
+  color: #ffffff;
+}
+
 .btns.btn-blue {
   background-color: #0072EC;
   color: #ffffff;
@@ -889,14 +906,14 @@ footer.light-gray {
   background-color: #0a3a92;
 }
 
-.btns.btn-outline-orange {
+.btns.btn-outline-blue {
   background-color: #ffffff;
-  color: #FF5E15;
-  border: 1px solid #FF5E15;
+  color: #0072EC;
+  border: 1px solid #0072EC;
 }
 
-.btns.btn-outline-orange:hover {
-  background-color: #FF5E15;
+.btns.btn-outline-blue:hover {
+  background-color: #0072EC;
   color: #ffffff;
 }
 
@@ -1339,6 +1356,14 @@ select:focus {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.form-top {
+  margin-bottom: 30px;
+}
+
+.form-top .form-name {
+  margin-bottom: 8px;
 }
 
 .form-col {
@@ -1831,6 +1856,14 @@ select:focus {
   display: block;
 }
 
+.login-btn-option {
+  margin-top: 30px;
+}
+
+.login-btn-option span {
+  font-size: 12px;
+}
+
 .login-ip {
   display: block;
   margin-top: 16px;
@@ -1865,6 +1898,62 @@ select:focus {
   margin-top: -25px;
   z-index: 10;
   position: relative;
+}
+
+.inspect-login-img {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 55%;
+          flex: 1 0 55%;
+  max-width: 55%;
+  position: relative;
+  background: url(../img/referring/kv-1.jpg) center no-repeat;
+  background-size: cover;
+}
+
+.inspect-operate {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 45%;
+          flex: 1 0 45%;
+}
+
+.inspect-operate .inspect-operate-inner {
+  padding: 30px 50px;
+}
+
+.inspect-operate .inspect-operate-inner form {
+  margin: 30px 0;
+}
+
+.notice {
+  border-top: 1px solid #e0e0e0;
+  padding: 20px 0;
+}
+
+.notice h3 {
+  margin-bottom: 20px;
+}
+
+.notice-list li {
+  position: relative;
+  padding: 4px 0;
+  padding-left: 16px;
+}
+
+.notice-list li::after {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background-color: #000000;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.notice-list li a {
+  text-decoration: underline;
+  color: #0072EC;
 }
 
 .side-nav-wrap {
