--- a/scss/style.scss
+++ b/scss/style.scss
@@ -198,6 +198,13 @@ body {
         height: 100%;
     }
 
+    &.inspect-login{
+        background: url(../img/referring/loginbg.jpg) $white right bottom no-repeat;
+        width: 100%;
+        height: 100%;
+    }
+
+
 
 }
 
@@ -318,6 +325,17 @@ footer {
         color: $white;
     }
 
+    &.btn-outline-orange {
+        background-color: $white;
+        color: $orange;
+        border: 1px solid $orange;
+
+        &:hover {
+            background-color: $orange;
+            color: $white;
+        }
+    }
+
     &.btn-blue {
         background-color: $blue;
         color: $white;
@@ -327,13 +345,13 @@ footer {
         }
     }
 
-    &.btn-outline-orange {
+    &.btn-outline-blue {
         background-color: $white;
-        color: $orange;
-        border: 1px solid $orange;
+        color: $blue;
+        border: 1px solid $blue;
 
         &:hover {
-            background-color: $orange;
+            background-color: $blue;
             color: $white;
         }
     }
@@ -766,6 +784,14 @@ select {
 .form-body {
     display: flex;
     flex-wrap: wrap;
+}
+
+.form-top{
+    margin-bottom: 30px;
+
+    .form-name{
+        margin-bottom: 8px;
+    }
 }
 
 .form-col {
@@ -1254,6 +1280,14 @@ select {
 
 }
 
+.login-btn-option{
+    margin-top: 30px;
+
+    span{
+        font-size: 12px;
+    }
+}
+
 .login-ip {
     display: block;
     margin-top: 16px;
@@ -1292,6 +1326,60 @@ select {
 }
 
 //代檢系統
+.inspect-login-img{
+    flex: 1 0 55%;
+    max-width: 55%;
+    position: relative;
+    background: url(../img/referring/kv-1.jpg) center no-repeat;
+    background-size: cover;
+}
+
+.inspect-operate{
+    flex: 1 0 45%;
+
+    .inspect-operate-inner{
+        padding: 30px 50px;
+
+        form{
+            margin: 30px 0;
+        }
+    }
+}
+
+.notice{
+    border-top: 1px solid $light-gray;
+    padding: 20px 0;
+
+    h3{
+        margin-bottom: 20px;
+    }
+}
+
+.notice-list{
+
+    li{
+        position: relative;
+        padding: 4px 0;
+        padding-left: 16px;
+
+        &::after{
+            content: "";
+            width: 8px;
+            height: 8px;
+            background-color: $black;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+        }
+
+        a{
+            text-decoration: underline;
+            color: $blue;
+        }
+    }
+}
+
 .side-nav-wrap{
     flex: 1 0 15%;
 }
