--- a/bro/css/style2.css
+++ b/bro/css/style2.css
@@ -6,82 +6,93 @@ body{
     margin: 0;
     padding: 0;
     border: 0;
+    width: 100%;
+    height: 100%;
+}
+
+img{
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .titlecube{
-    width: 1920px;
-    height: 70px;
+    width: 100%;
+    height: 6.5%;
     color: #FFFFFF;
     background-color: #272b35;
     text-align: left;
+    padding-bottom: 0.6%;
 }
 
 .shalogo{
-    width: 51.3px;
-    height: 51.3px;
+    max-width: 2.5%;
+    max-height: 2.5%;
     float: left;
-    padding-left: 9rem;
-    padding-top: 0.65rem;
-}
-
-span{
-    font-weight: lighter;
-    font-size: 14px;
-    padding-left: 0.35rem;
-    padding-top: 0.8rem;
+    padding-left: 8%;
+    padding-top: 0.5%;
 }
 
 .title1{
-    font-weight: bold;
-    font-size: 20px;
-    padding-left: 12.5rem;
-    padding-top: 1rem;
+    font-weight: lighter;
+    font-size: 10px;
+    padding-left: 10.8%;
+    padding-top: 0.6%;
 }
 
-.slidecube .slide2{
+.title2{
+    font-weight: bold;
+    font-size: 14px;
+    padding-left: 10.8%;
+    padding-top: 0.2%;
+}
+
+.slidecube{
     background-color: transparent;
     float: left;
-    width: 1156px;
-    height: 1010px;
+    width: 60%;
+    height: 80%;
 }
 
 .logincube{
     background-color: #FFFFFF;
-    width: 764px;
-    height: 1010px;
-    margin-left: 72.25rem;
-    position: relative;
+    width: 40%;
+    height: 87%;
+    margin-left: 60%;
 }
 
 .textlogin{
     color: #171717;
-    font-size: 40px;
+    font-size: 36px;
     font-weight: bold;
-    padding-top: 2.8rem;
-    padding-left: 5.2rem;
+    padding-top: 4.55%;
+    padding-left: 10.8%;
 }
 
 .hr1{
-    margin-left: 5.2rem;
-    margin-top: 0.8rem;
+    margin-top: 2.5%;
+    margin-left: 10.8%;
+    width: 70px;
+    height: 2px;
 }
 
 .hr2{
-    margin-left: 5.2rem;
-    margin-top: 8rem;
+    margin-top: 12.8%;
+    margin-left: 11.8%;
+    width: 78.5%;
+    height: 1px;
 }
 
 .lglabel{
     font-size: 15px;
-    padding-top: 2rem;
-    padding-left: 5.2rem;
-    padding-bottom: 0.5rem;    
+    padding-top: 3.1%;
+    padding-left: 11.8%;
+    padding-bottom: 0.9%;
 }
 
 .lginput{
-    margin-left: 5.2rem;
-    width: 600px;
-    height: 40px;
+    margin-left: 11.8%;
+    width: 78.5%;
+    height: 15%;
     background-color: #F4F4F4;
     border-style: none;
     border-bottom: 1px solid;
@@ -89,9 +100,9 @@ span{
 }
 
 .vercode{
-    margin-left: 5.2rem;
-    width: 200px;
-    height: 40px;
+    margin-left: 11.8%;
+    width: 26.2%;
+    height: 10%;
     background-color: #F4F4F4;
     border-style: none;
     border-bottom: 1px solid;
@@ -102,17 +113,19 @@ span{
     background-color: transparent;
     float: center;
     vertical-align: middle;
-    margin-left: 0.5rem;
-    margin-top: -0.3rem;
+    max-width: 14.3%;
+    max-height: 14.3%;
+    margin-left: 0.5%;
 }
 
 .lbtn-ver{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0.5rem;
-    width: 129px;
-    height: 40px;
+    text-decoration: none;
+    margin-left: 0.5%;
+    width: 18%;
+    height: 15%;
     border: 1px solid #0F62FE;
     background-color: #FFFFFF;
     color: #0F62FE;
@@ -123,7 +136,8 @@ span{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-left: 5.2rem;
+    text-decoration: none;
+    margin-left: 11.8%;
     margin-top: 2rem;
     width: 129px;
     height: 40px;
@@ -137,7 +151,8 @@ span{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    margin-left: 5.2rem;
+    text-decoration: none;
+    margin-left: 11.8%;
     margin-top: 2rem;
     width: 129px;
     height: 40px;
@@ -182,10 +197,9 @@ span{
 
 .btmcube{
     background-color: #F4F4F4;
-    width: 764px;
+    width: 100%;
     height: 70px;
-    position: absolute;
-    bottom: 0rem;
+    bottom: 0%;
 }
 
 .textbtm{
