--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,6 +259,8 @@ main {
     &.inspect-mod {
         display: flex;
         position: relative;
+
+        
     }
 
 }
@@ -384,6 +386,20 @@ footer {
     .sha-ips{
         font-size: 12px;
         margin: auto 0;
+    }
+
+    .mobile-nav{
+        padding: 8px 16px 0 0;
+        display: none;
+
+        @media (max-width: 991px){
+            display: block;
+        }
+
+        svg{
+            width: 16px;
+        }
+
     }
 
 }
@@ -1119,9 +1135,21 @@ select {
     }
 }
 
+.carousel-part{
+
+    @media (max-width: 991px){
+        display: none !important;
+    }
+
+}
+
 .operate-part {
     display: flex;
     margin-top: 35px;
+
+    @media (max-width: 991px){
+        display: block;
+    }
 
     .o-block {
         background-color: $white;
@@ -1152,11 +1180,24 @@ select {
 
     .home-info {
         flex: 1 0 60%;
+
+        @media (max-width: 991px){
+            flex: 1 0 100%;
+            max-width: 100%;
+        }
+    
     }
 
     .login-info {
         flex: 1 0 30%;
         margin-left: 30px;
+
+        @media (max-width: 991px){
+            flex: 1 0 100%;
+            max-width: 100%;
+            margin-left: 0px;
+            margin-top: 30px;
+        }
     }
 }
 
@@ -1347,10 +1388,31 @@ select {
     position: relative;
     background: url(../img/referring/kv-1.jpg) center no-repeat;
     background-size: cover;
+
+    @media (max-width: 991px){
+        flex: 1 0 35%;
+        max-width: 35%;
+    }
+
+    @media (max-width: 767px){
+        flex: 1 0 0%;
+        max-width: 0%;
+        display: none;
+    }
 }
 
 .inspect-operate{
     flex: 1 0 45%;
+
+    @media (max-width: 991px){
+        flex: 1 0 65%;
+        max-width: 65%;
+    }
+
+    @media (max-width: 767px){
+        flex: 1 0 100%;
+        max-width: 100%;
+    }
 
     .inspect-operate-inner{
         padding: 30px 50px;
@@ -1412,6 +1474,37 @@ select {
 
 .side-nav-wrap{
     flex: 1 0 18%;
+
+    &::after{
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: $black, $alpha:0.5);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 98;
+        opacity: 0;
+        transition: opacity .3s ease-out;
+
+    }
+
+    @media (max-width: 991px){
+        flex: none;
+
+        &.is-open{
+            .side-nav{
+                left: 0;
+            }
+
+            &::after{
+                opacity: 1;
+    
+            }
+        }
+    }
 }
 
 .side-nav {
@@ -1423,6 +1516,15 @@ select {
     left: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    transition: .3s ease-out;
+    z-index: 99;
+
+    @media (max-width: 991px){
+        left: -100%;
+        max-width: 100%;
+
+        
+    }
 
     .side-each {
         font-size: 14px;
@@ -1530,6 +1632,12 @@ select {
 
 .inspect-content {
     flex: 1 0 82%;
+
+    @media (max-width: 991px){
+        flex: none;
+        width: 100%;
+    }
+
 
     .inspect-container {
         width: 95%;
