--- a/scss/style.scss
+++ b/scss/style.scss
@@ -377,7 +377,7 @@ footer {
     .sha-text {
         flex: auto;
 
-        @media (max-width: 991px){
+        @media (max-width: 568px){
             display: none;
         }
 
@@ -425,7 +425,6 @@ footer {
     font-weight: bold;
     cursor: pointer;
     position: relative;
-    padding: 16px;
 
     &:first-child {
         padding-left: 0;
@@ -433,6 +432,8 @@ footer {
 
     .list-item-text {
         position: relative;
+        display: block;
+        padding: 16px;
 
         svg {
             width: 8px;
@@ -551,9 +552,15 @@ footer {
     border-bottom: 1px solid $pale-gray;
     display: flex;
 
-    @media screen and (max-width: 991px){
-        display: block;
+    &.mobile-block{
+
+        @media screen and (max-width: 991px){
+            display: block;
+        }
+
     }
+
+    
 
     h3 {
         flex: auto;
@@ -571,16 +578,15 @@ footer {
 
     .btns {
         margin-left: 16px;
-
-        
     }
 
     @media screen and (max-width: 991px){
         margin-top: 16px;
-        justify-content: space-between;
 
-        .btns{
+        .btns {
             margin-left: 0px;
+            margin-right: 16px;
+            
         }
         
     }
@@ -739,6 +745,10 @@ input {
         background-position: center;
         background-repeat: no-repeat;
     }
+
+    &[type="radio"]::-webkit-calendar-picker-indicator{
+        color-scheme: $orange;
+    }
 }
 
 select {
@@ -884,7 +894,7 @@ select {
     .form-group {
         padding: 12px 16px;
         width: 100%;
-        max-width: 600px;
+        max-width: 412px;
         display: flex;
         margin-right: -1rem;
 
@@ -915,6 +925,14 @@ select {
             label {
                 padding-right: 32px;
                 cursor: pointer;
+
+                @media (max-width: 1200px){
+                    padding-right: 8px;
+                }
+
+                @media (max-width: 991px){
+                    padding-right: 4px;
+                }
             }
 
         }
@@ -974,6 +992,43 @@ select {
         }
     }
 
+    &.fix-size-12{
+        width: 35%;
+
+        @media (max-width: 991px){
+            width: 100%;
+        }
+    }
+
+}
+
+.form-row-wrap{
+    display: flex;
+    margin-left: -16px;
+    margin-right: -16px;
+}
+
+.multi-input{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -16px;
+    margin-right: -16px;
+
+    .multi-item{
+        
+        p{
+            flex: 1 0 20%;
+        }
+
+        @media (max-width: 768px){
+            margin-bottom: 16px;
+
+            &:last-child{
+                margin-bottom: 0;
+            }
+        }
+        
+    }
 }
 
 .table-part {
@@ -1208,7 +1263,7 @@ select {
             &::after {
                 content: "";
                 width: 20px;
-                height: 3px;
+                height: 2px;
                 background-color: $orange;
                 margin: auto 0;
                 margin-bottom: 0;
@@ -1379,9 +1434,19 @@ select {
 
 .login-btn-option{
     margin-top: 30px;
+    display: flex;
 
     span{
         font-size: 12px;
+        display: block;
+        margin: auto 4px;
+    }
+
+    @media (max-width: 991px){
+        display: block;
+        span{
+            margin: 8px 0;
+        }
     }
 }
 
